--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,8 +7,13 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: say hello
-        run: echo "Hello there..."
-      - name: say goodbye
-        run: echo "Goodbye"
+        uses: actions/checkout@v3
+      - name: set up python3.9.5
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9.5'
+          architecture: 'x64'
+      - name: upgrade pip
+        run: python -m pip install --upgrade pip
+      - name: install all dependencies
+        run: pip install -r requirements.txt
