--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,6 +4,15 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    env:
+      DB_HOST: ec2-52-44-13-158.compute-1.amazonaws.com
+      DB_NAME: ddiltu1th8n0jb
+      DB_USER: gsmtyfxbaaxlqx
+      DB_PASSWORD: c9c836aac13e78e99ba362852ad36a0818f92470545d5187fcb18d63110c3a96
+      DB_PORT: 5432
+      SECRET_KEY: zDG2PDigIZvCOX2oIPwfL7H78NnkVjPxSLslA+nntn4=
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
@@ -17,7 +26,8 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: install all dependencies
         run: pip install -r requirements.txt
+      - name: install pytest
+        run: pip install pytest
       - name: test with pytest
-        run: |
-          pip install pytest
-          pytest -v
+        run: pytest -v
+  
