--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,15 +4,17 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    enviroment:
+      name: testing
     env:
-      DB_HOST: ec2-52-44-13-158.compute-1.amazonaws.com
-      DB_NAME: ddiltu1th8n0jb
-      DB_USER: gsmtyfxbaaxlqx
-      DB_PASSWORD: c9c836aac13e78e99ba362852ad36a0818f92470545d5187fcb18d63110c3a96
-      DB_PORT: 5432
-      SECRET_KEY: zDG2PDigIZvCOX2oIPwfL7H78NnkVjPxSLslA+nntn4=
-      ALGORITHM: HS256
-      ACCESS_TOKEN_EXPIRE_MINUTES: 60
+      DB_HOST: ${{secrets.DB_HOST}}
+      DB_NAME: ${{secrets.DB_NAME}}
+      DB_USER: ${{secrets.DB_USER}}
+      DB_PASSWORD: ${{secrets.DB_PASSWORD}}
+      DB_PORT: ${{secrets.DB_PORT}}
+      SECRET_KEY: ${{secrets.SECRET_KEY}}
+      ALGORITHM: ${{secrets.ALGORITHM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
@@ -30,4 +32,3 @@ jobs:
         run: pip install pytest
       - name: test with pytest
         run: pytest -v
-  
