--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,9 +20,9 @@ jobs:
         image: postgres
         env:
           POSTGRES_PASSWORD: ${{secrets.DB_PASSWORD}}
-          POSTGRES_DB: ${{secrets.DB_NAME}}_test
+          POSTGRES_DB: ${{secrets.DB_NAME}}
         ports:
-        - 5432:5432
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -44,4 +44,4 @@ jobs:
       - name: install pytest
         run: pip install pytest
       - name: test with pytest
-        run: pytest -v
+        run: pytest -v -s
