--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -41,6 +41,8 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: install all dependencies
         run: pip install -r requirements.txt
+      - name: update tables
+        run: python app/database_tests.py
       - name: install pytest
         run: pip install pytest
       - name: test with pytest
