--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Code
 on: [push, pull_request]
 
 jobs:
-  job1:
+  build:
     environment:
       name: testing
     env:
@@ -47,3 +47,17 @@ jobs:
         run: pip install pytest
       - name: test with pytest
         run: pytest -v -s
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    enviroment:
+      name: production
+    steps:
+      - name: pulling git repo
+        uses: actions/checkout@v3
+      - name: deploying to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
