--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "bcrypt>=4.2.0",
+    "fastapi-cli>=0.0.5",
     "fastapi[standard]>=0.115.0",
+    "psycopg2>=2.9.9",
+    "psycopg[binary]>=3.2.3",
     "pydantic-settings>=2.5.2",
     "pydantic[email]>=2.9.2",
     "pyjwt>=2.9.0",
