Modify Docker Compose setup

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,9 +4,12 @@ services:
   db:
     image: postgres
     container_name: psql
+    env_file:
+      - .env
     environment:
-      - POSTGRES_PASSWORD=secret
-      - PGUSER=postgres
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?Variable not set}
+      - POSTGRES_USER=${POSTGRES_USER?Variable not set}
+      - POSTGRES_DB=${POSTGRES_DB?Variable not set}
     ports:
       - 5432:5432
     volumes:
