--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,9 @@ license = { file = "LICENSE" }
 [tool.uv]
 dev-dependencies = [
     "faker>=30.1.0",
+    "httpx>=0.27.2",
     "mypy>=1.11.2",
-    "pytest>=8.3.3"
+    "pytest>=8.3.3",
 ]
 
 [tool.pdm]
