Consolidate uv setup and caching steps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,15 +27,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Enable caching
-        uses: astral-sh/setup-uv@v2
-        with:
-          enable-cache: true
-
-      - name: Install uv
+      - name: Set up uv
         uses: astral-sh/setup-uv@v2
         with:
           version: "0.4.9"
+          enable-cache: true
 
       - name: Set up Python ${{ matrix.python_version }}
         run: uv python install ${{ matrix.python_version }}
