Add default admin user credentials to .env

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=secret
+
+FIRST_USER_EMAIL=admin@example.com
+FIRST_USER_PASSWORD=changethis
