--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,12 @@ license = { file = "LICENSE" }
 
 [tool.uv]
 dev-dependencies = [
+    "coverage>=7.6.1",
     "faker>=30.1.0",
     "httpx>=0.27.2",
     "mypy>=1.11.2",
     "pytest>=8.3.3",
+    "ruff>=0.6.9",
 ]
 
 [tool.pdm]
